# docgraph

./: .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  AGENTS.md  CLAUDE.md  Makefile  README.md  bandit.yaml  dev.sh  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/: docgraph.example.toml  stopwords_default.txt
docs/: ARCHITECTURE.md  CONFIG.md  DocGraph_MVP0_作業チェックリスト_v0.2.md  DocGraph_MVP0_要件定義書_v0.2.md  DocGraph_リポジトリ初期構成_v0.1.md  DocGraph_最終ゴール要件定義書_v0.2.md  ROADMAP.md  USAGE.md  stopwords_default.txt  stopwords_kandy.txt
docs/superpowers/plans/: 2026-07-15-mvp0-implementation.md
scripts/: add-static-analysis.sh  check.sh  fix-lint-and-tools.sh  init-docgraph.sh
src/docgraph/: __init__.py
src/docgraph/application/: index_usecase.py  ports.py  query_usecase.py  stopwords_service.py
src/docgraph/domain/: confidence.py  document.py  heading.py  link.py  relation.py
src/docgraph/infrastructure/: config_loader.py  file_scanner.py  markdown_parser.py  schema.sql  sqlite_store.py
src/docgraph/interface/: cli.py  formatters.py
tests/domain/: test_confidence.py  test_heading.py
