[project]
name = "docgraph"
version = "0.1.0"
description = "Documentation relationship analysis and knowledge graph engine"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Kimura Daichi" }
]
dependencies = [
    "typer>=0.12",
    "markdown-it-py>=3.0",
    "pydantic>=2.0",
    "pathspec>=0.12",
    "tomli>=2.0; python_version<'3.11'",
]

[project.scripts]
docgraph = "docgraph.interface.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.5",
    "bandit>=1.9.4",
    "vulture>=2.16",
    "radon>=6.0.1",
    "deptry>=0.25.1",
    "pre-commit>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docgraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=docgraph --cov-report=term-missing"
